--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,8 +24,13 @@
     color: #FDF7FF;
     display: flex;
     margin:auto;
+    text-align: center;
     justify-content: center;
     
 }
 
 
+main{
+    height: 100vh;
+    width: 100vw;
+}
