--- a/Styles/style.css
+++ b/Styles/style.css
@@ -22,10 +22,13 @@
 #heading {
     font-size: 70px;
     color: #FDF7FF;
+    margin: auto;
+    height: 90vh;
     display: flex;
-    margin:auto;
-    text-align: center;
+    align-items: center;
     justify-content: center;
+     
+    
     
 }
 
