--- a/Styles/style.css
+++ b/Styles/style.css
@@ -38,7 +38,7 @@ body{
    
 }
 /* Admin page */
-/* .img3 {
+.img3 {
     width: 100vw;
     height: 100vh;
     background: linear-gradient(rgba(176, 175, 175, 0), rgba( 0,0,0,1)) , url(/Assets/Imgs/Javascript\ Project\ Img3jpg.jpg);
@@ -47,10 +47,10 @@ body{
     background-position: center 
     
    
-} */
+}
 /* landing page text */
 .home-p-text{
-    font-size: 20px;
+    font-size: 18px;
     color: #c6c6c6;
     display: flex;
     align-items: center;
@@ -88,7 +88,7 @@ body{
 }
 /* Product Page P text */
 .product-p-text {
-        font-size: 20px;
+        font-size: 18px;
         color:#c6c6c6 ;
         display: flex;
         align-items: center;
@@ -96,6 +96,29 @@ body{
         margin: auto;
         padding-right: 5rem;
         padding-left: 5rem;
+    }
+    
+/* Checkout Page */
+    #heading-checkoutpage{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 72px;
+    color: #FDF7FF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    padding-bottom: 1rem;
+
+    }
+
+    .subheading-checkoutpage{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 35px;
+    color: #c6c6c6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
     }
 
 main{
@@ -105,9 +128,9 @@ main{
 
 
 /* cards */
-.card{
+/* .card{
     gap: 5rem;
-}
+} */
 
 
 
