--- a/Styles/style.css
+++ b/Styles/style.css
@@ -10,9 +10,10 @@
 
 body{
     overflow-x: hidden;
-    
-
 }
+
+nav-bar
+
 /* background images */
 /* landing page img */
 .img1 {
@@ -106,7 +107,6 @@ body{
     align-items: center;
     justify-content: center;
     margin: auto;
-    padding-bottom: 1rem;
 
     }
 
