--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,7 +12,6 @@ body{
     overflow-x: hidden;
 }
 
-
 /* background images */
 /* landing page img */
 .img1 {
@@ -127,14 +126,16 @@ main{
 
 .card-img-top{
         width:18rem;
-        height: 25rem;
+        height: 20rem;
 }
 
 
-body{
+body,header,footer{
     @media (min-width: 300px) {    
         {
             width: 100%;
         }
     }
 }
+
+
